netshoot-frontend.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: netshoot-frontend
  namespace: app-example
  labels:
    app: frontend
    role: web
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command:
      - sleep
      - "3600"
